[gd_scene load_steps=2 format=3 uid="uid://c1qhjy7rgilct"]

[ext_resource type="Script" path="res://addons/dock_chan/dock_chan_node.gd" id="1_l212o"]

[node name="dock_chan" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_l212o")

[node name="SelectSheetDir" type="Button" parent="."]
layout_mode = 2
offset_left = 268.0
offset_top = 13.0
offset_right = 364.0
offset_bottom = 44.0
text = "Choose File"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
position = Vector2i(0, 36)
size = Vector2i(392, 162)
ok_button_text = "Select Current Folder"
file_mode = 2

[node name="SheetDirectory" type="TextEdit" parent="."]
layout_mode = 2
offset_left = 13.0
offset_top = 9.0
offset_right = 251.0
offset_bottom = 48.0
editable = false

[node name="SheetName" type="TextEdit" parent="."]
layout_mode = 2
offset_left = 12.0
offset_top = 55.0
offset_right = 355.0
offset_bottom = 93.0
placeholder_text = "Animation Sheet Name"

[node name="SelectOutDir" type="Button" parent="."]
layout_mode = 2
offset_left = 264.0
offset_top = 104.0
offset_right = 360.0
offset_bottom = 135.0
text = "Choose File"

[node name="SelectOutDirDialogue" type="FileDialog" parent="."]
title = "Open a Directory"
position = Vector2i(0, 36)
size = Vector2i(392, 162)
ok_button_text = "Select Current Folder"
file_mode = 2

[node name="OutDirectory" type="TextEdit" parent="."]
layout_mode = 2
offset_left = 8.0
offset_top = 100.0
offset_right = 250.0
offset_bottom = 139.0
editable = false

[node name="Generate" type="Button" parent="."]
layout_mode = 0
offset_left = 110.0
offset_top = 152.0
offset_right = 288.0
offset_bottom = 183.0
disabled = true
text = "Generate"
